# svelteapp-fastapi-template

./: .env.dev  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9c9f62c3f8ee_initial_migration.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  health.py  users.py
backend/app/auth/: deps.py  session_manager.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: base.py  session.py  user.py
backend/app/schemas/: user.py
backend/app/services/: users.py
backend/app/tests/: test_auth_flow.py  test_health.py
web/: .env.example  .prettierignore  eslint.config.js  package-lock.json  package.json
web/src/: app.css
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
