[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svelte-fastapi-backend"
version = "0.1.0"
description = "FastAPI template with async SQLAlchemy, Alembic, cookie sessions"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic-settings==2.4.0",
  "pydantic==2.8.2",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "httpx==0.27.2",
  "orjson==3.10.7",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "coverage==7.6.1",
  "ruff==0.6.9",
  "black==24.8.0",
  "anyio==4.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","SIM","RUF"]
lint.ignore = []

